--- a/app/src/main/res/layout/item_lv_product_select.xml
+++ b/app/src/main/res/layout/item_lv_product_select.xml
@@ -52,6 +52,7 @@
             android:layout_centerVertical="true"
             android:lineSpacingExtra="3dp"
             android:textColor="@color/text_black_color"
+            android:textSize="14sp"
             android:text="产品名称1 (别名1，别名2)"/>
 
     </RelativeLayout>
