--- a/app/src/main/res/layout/activity_add_service.xml
+++ b/app/src/main/res/layout/activity_add_service.xml
@@ -88,6 +88,7 @@
         <RelativeLayout
             android:id="@+id/rl_spot1"
             android:background="@drawable/select_white_background"
+            android:visibility="gone"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
