--- a/app/src/main/res/layout/activity_company_list.xml
+++ b/app/src/main/res/layout/activity_company_list.xml
@@ -70,6 +70,15 @@
                     android:textColor="@color/title_text_sel"/>
 
             </RadioGroup>
+
+            <ImageView
+                android:id="@+id/imgViSearch"
+                android:layout_width="50dp"
+                android:layout_height="22dp"
+                android:layout_marginRight="0dp"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:src="@mipmap/search"/>
         </RelativeLayout>
     </LinearLayout>
 
