--- a/app/src/main/res/layout/activity_release_offer.xml
+++ b/app/src/main/res/layout/activity_release_offer.xml
@@ -54,11 +54,22 @@
             <View style="@style/LineStyle"/>
 
 
+
+
+
+
+
+
+
+
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center_vertical"
-                android:padding="12dp"
+                android:paddingLeft="12dp"
+                android:paddingRight="12dp"
+                android:paddingTop="12dp"
                 android:orientation="horizontal">
 
                 <TextView
@@ -70,7 +81,7 @@
 
                 <EditText
                     android:id="@+id/edtTxtPrice"
-                    android:layout_width="120dp"
+                    android:layout_width="160dp"
                     android:layout_height="wrap_content"
                     android:background="@drawable/shape_item_attent_trans"
                     android:layout_marginLeft="5dp"
@@ -86,10 +97,57 @@
                     android:id="@+id/txtUnit"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="10dp"
+                    android:layout_marginLeft="25dp"
                     android:text="元"
+                    android:textSize="13sp"
+                    android:textColor="@color/text_black_color"/>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center_vertical"
+                android:padding="12dp"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="产品重量："
                     android:textSize="14sp"
                     android:textColor="@color/text_black_color"/>
+
+                <EditText
+                    android:id="@+id/edtTxtWeight"
+                    android:layout_width="160dp"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/shape_item_attent_trans"
+                    android:layout_marginLeft="5dp"
+                    android:padding="5dp"
+                    android:gravity="center"
+                    android:hint="请输入产品重量"
+                    android:inputType="numberDecimal"
+                    android:textColorHint="@color/light_gray_color"
+                    android:textColor="@color/text_black_color"
+                    android:textSize="14sp"/>
+
+                <TextView
+                    android:id="@+id/txtWeightUnit"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/shape_item_attent_trans"
+                    android:gravity="center_vertical"
+                    android:layout_marginLeft="15dp"
+                    android:paddingLeft="10dp"
+                    android:paddingRight="6dp"
+                    android:paddingTop="5dp"
+                    android:paddingBottom="5dp"
+                    android:drawableRight="@mipmap/icon_arrows_down"
+                    android:drawablePadding="5dp"
+                    android:text=""
+                    android:textColor="@color/text_gray_light_color"
+                    android:textSize="13sp"/>
 
             </LinearLayout>
 
@@ -101,6 +159,17 @@
                 android:background="@color/view_background_gray_color"/>
 
             <View style="@style/LineStyle"/>
+
+
+
+
+
+
+
+
+
+
+
 
             <TextView
                 android:layout_width="wrap_content"
