--- a/app/src/main/res/layout/fragment_hom6.xml
+++ b/app/src/main/res/layout/fragment_hom6.xml
@@ -105,16 +105,12 @@
         android:id="@+id/pull_refresh_scrollview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:focusableInTouchMode="true"
-        android:focusable="true"
-        android:descendantFocusability="beforeDescendants"
         android:layout_below="@id/title_layout">
 
         <com.appjumper.silkscreen.view.ObservableScrollView
             android:id="@+id/scrollView"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:descendantFocusability="afterDescendants">
+            android:layout_height="match_parent">
 
             <LinearLayout
                 android:id="@+id/l_homeview"
@@ -130,24 +126,26 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:background="@color/while_color"
+                    android:focusable="true"
+                    android:focusableInTouchMode="true"
+                    android:background="@mipmap/home_volume_bg1"
                     android:orientation="vertical">
 
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:orientation="vertical"
-                        android:layout_marginTop="15dp"
-                        android:layout_marginLeft="15dp"
-                        android:layout_marginRight="15dp"
-                        android:layout_marginBottom="5dp"
-                        android:background="@mipmap/home_volume_bg">
+                        android:layout_marginTop="12dp"
+                        android:layout_marginLeft="20dp"
+                        android:layout_marginRight="35dp"
+                        android:layout_marginBottom="12dp"
+                        android:background="@mipmap/home_volume_bg2">
 
                         <LinearLayout
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center_horizontal"
-                            android:layout_marginTop="1.5dp"
+                            android:layout_marginTop="8dp"
                             android:orientation="horizontal">
 
                             <TextView
@@ -164,7 +162,7 @@
                                 android:layout_marginLeft="6dp"
                                 android:text=""
                                 android:textSize="15sp"
-                                android:textColor="#ff6000"/>
+                                android:textColor="#FF5301"/>
 
                             <TextView
                                 android:layout_width="wrap_content"
@@ -178,9 +176,9 @@
                         <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:paddingLeft="15dp"
+                            android:paddingLeft="40dp"
                             android:paddingRight="15dp"
-                            android:layout_marginTop="8dp"
+                            android:layout_marginTop="3dp"
                             android:orientation="horizontal">
 
                             <LinearLayout
@@ -203,7 +201,7 @@
                                     android:layout_marginLeft="6dp"
                                     android:text=""
                                     android:textSize="15sp"
-                                    android:textColor="#ff6000"/>
+                                    android:textColor="#FF5301"/>
 
                                 <TextView
                                     android:layout_width="wrap_content"
@@ -211,7 +209,7 @@
                                     android:layout_marginLeft="2dp"
                                     android:text="单"
                                     android:textSize="12sp"
-                                    android:textColor="#ff6000"/>
+                                    android:textColor="#FF5301"/>
                             </LinearLayout>
 
 
@@ -235,7 +233,7 @@
                                     android:layout_marginLeft="6dp"
                                     android:text=""
                                     android:textSize="15sp"
-                                    android:textColor="#ff6000"/>
+                                    android:textColor="#FF5301"/>
 
                                 <TextView
                                     android:layout_width="wrap_content"
@@ -243,7 +241,7 @@
                                     android:layout_marginLeft="2dp"
                                     android:text="家"
                                     android:textSize="12sp"
-                                    android:textColor="#ff6000"/>
+                                    android:textColor="#FF5301"/>
                             </LinearLayout>
 
 
@@ -252,9 +250,9 @@
                         <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:paddingLeft="15dp"
+                            android:paddingLeft="40dp"
                             android:paddingRight="15dp"
-                            android:layout_marginTop="4dp"
+                            android:layout_marginTop="1dp"
                             android:orientation="horizontal">
 
                             <LinearLayout
@@ -277,7 +275,7 @@
                                     android:layout_marginLeft="6dp"
                                     android:text=""
                                     android:textSize="15sp"
-                                    android:textColor="#ff6000"/>
+                                    android:textColor="#FF5301"/>
 
                                 <TextView
                                     android:layout_width="wrap_content"
@@ -285,7 +283,7 @@
                                     android:layout_marginLeft="2dp"
                                     android:text="次"
                                     android:textSize="12sp"
-                                    android:textColor="#ff6000"/>
+                                    android:textColor="#FF5301"/>
                             </LinearLayout>
 
 
@@ -309,7 +307,7 @@
                                     android:layout_marginLeft="6dp"
                                     android:text=""
                                     android:textSize="15sp"
-                                    android:textColor="#ff6000"/>
+                                    android:textColor="#FF5301"/>
 
                                 <TextView
                                     android:layout_width="wrap_content"
@@ -317,7 +315,7 @@
                                     android:layout_marginLeft="2dp"
                                     android:text="次"
                                     android:textSize="12sp"
-                                    android:textColor="#ff6000"/>
+                                    android:textColor="#FF5301"/>
                             </LinearLayout>
 
 
@@ -340,8 +338,8 @@
                         android:id="@+id/llAskBuy"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:paddingTop="14dp"
-                        android:paddingBottom="14dp"
+                        android:paddingTop="13dp"
+                        android:paddingBottom="13dp"
                         android:background="@drawable/select_white_background"
                         android:layout_weight="0.9"
                         android:gravity="center_horizontal"
@@ -366,8 +364,8 @@
                         android:id="@+id/rlStockShop"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:paddingTop="14dp"
-                        android:paddingBottom="14dp"
+                        android:paddingTop="13dp"
+                        android:paddingBottom="13dp"
                         android:background="@drawable/select_white_background"
                         android:layout_weight="1"
                         android:gravity="center_horizontal"
@@ -392,8 +390,8 @@
                         android:id="@+id/llFreight"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:paddingTop="14dp"
-                        android:paddingBottom="14dp"
+                        android:paddingTop="13dp"
+                        android:paddingBottom="13dp"
                         android:background="@drawable/select_white_background"
                         android:layout_weight="1"
                         android:gravity="center_horizontal"
@@ -418,8 +416,8 @@
                         android:id="@+id/llCompany"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:paddingTop="14dp"
-                        android:paddingBottom="14dp"
+                        android:paddingTop="13dp"
+                        android:paddingBottom="13dp"
                         android:background="@drawable/select_white_background"
                         android:layout_weight="0.9"
                         android:gravity="center_horizontal"
@@ -744,70 +742,6 @@
 
 
 
-    <!--**************************************推荐*****************************************-->
-
-                <LinearLayout
-                    android:id="@+id/llRecommend"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:visibility="gone"
-                    android:background="@color/while_color"
-                    android:orientation="vertical">
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:gravity="center"
-                        android:orientation="horizontal">
-
-                        <View
-                            android:layout_width="30dp"
-                            android:layout_height="0.7dp"
-                            android:background="@color/text_black_color2"/>
-
-                        <TextView
-                            android:id="@+id/txtTitleRecommend"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_centerInParent="true"
-                            android:gravity="center_vertical"
-                            android:paddingBottom="12dp"
-                            android:paddingTop="12dp"
-                            android:text="  推荐  "
-                            android:textColor="@color/text_black_color2"
-                            android:textSize="15sp" />
-
-                        <View
-                            android:layout_width="30dp"
-                            android:layout_height="0.7dp"
-                            android:background="@color/text_black_color2"/>
-
-                    </LinearLayout>
-
-                    <View style="@style/LineStyle"/>
-
-                    <android.support.design.widget.TabLayout
-                        android:id="@+id/tabLaytRecommend"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:background="@color/while_color"
-                        app:tabBackground="@color/while_color"
-                        app:tabIndicatorColor="@color/orange_color"
-                        app:tabIndicatorHeight="1dp"
-                        app:tabSelectedTextColor="@color/orange_color"
-                        app:tabTextColor="@color/black_color"/>
-
-                    <View
-                        style="@style/LineStyle"/>
-
-                    <com.appjumper.silkscreen.view.MyViewPager
-                        android:id="@+id/pagerRecommend"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"/>
-
-                </LinearLayout>
-
-
             </LinearLayout>
         </com.appjumper.silkscreen.view.ObservableScrollView>
 
@@ -826,33 +760,6 @@
         android:layout_marginRight="12dp"
         android:src="@mipmap/icon_home_back_to_top"
         android:visibility="gone" />
-
-
-    <!--推荐企业悬停-->
-    <LinearLayout
-        android:id="@+id/llHoverRecommend"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/title_layout"
-        android:visibility="gone"
-        android:orientation="vertical">
-
-        <android.support.design.widget.TabLayout
-            android:id="@+id/tabLaytHoverRecommend"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/while_color"
-            app:tabBackground="@color/while_color"
-            app:tabIndicatorColor="@color/orange_color"
-            app:tabIndicatorHeight="1dp"
-            app:tabSelectedTextColor="@color/orange_color"
-            app:tabTextColor="@color/black_color"/>
-
-        <View style="@style/LineStyle"/>
-
-    </LinearLayout>
-
-
 
 
 </RelativeLayout>
