--- a/app/src/main/res/layout/item_lv_offer_record.xml
+++ b/app/src/main/res/layout/item_lv_offer_record.xml
@@ -15,17 +15,29 @@
         android:layout_centerVertical="true"
         android:text="平台报价"
         android:textColor="@color/text_black_color"
-        android:textSize="14sp"/>
+        android:textSize="13sp"/>
 
     <TextView
         android:id="@+id/txtPrice"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
+        android:layout_toRightOf="@id/txtName"
+        android:layout_marginLeft="25dp"
         android:layout_centerVertical="true"
         android:text="***元/套"
         android:textColor="@color/text_black_color"
-        android:textSize="14sp"/>
+        android:textSize="13sp"/>
+
+    <TextView
+        android:id="@+id/txtWeight"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_toRightOf="@id/txtPrice"
+        android:layout_marginLeft="25dp"
+        android:layout_centerVertical="true"
+        android:text="29.50kg/卷"
+        android:textColor="@color/text_black_color"
+        android:textSize="13sp"/>
 
     <TextView
         android:id="@+id/txtTime"
@@ -35,7 +47,7 @@
         android:layout_centerVertical="true"
         android:text="10-10 13:40:22"
         android:textColor="@color/text_black_color"
-        android:textSize="14sp"/>
+        android:textSize="13sp"/>
 
     <TextView
         android:id="@+id/txtHandle"
@@ -63,8 +75,8 @@
         android:background="@drawable/selector_btn_blue"
         android:paddingTop="4dp"
         android:paddingBottom="4dp"
-        android:paddingLeft="23dp"
-        android:paddingRight="23dp"
+        android:paddingLeft="20dp"
+        android:paddingRight="20dp"
         android:text="删除报价"
         android:textColor="@color/while_color"
         android:textSize="12sp"/>
