--- a/app/src/main/res/layout/fragment_hom7.xml
+++ b/app/src/main/res/layout/fragment_hom7.xml
@@ -158,6 +158,8 @@
                     android:id="@+id/llMenu"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:focusable="true"
+                    android:focusableInTouchMode="true"
                     android:orientation="horizontal">
 
                     <LinearLayout
